//protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package setting;

service RadacatVersion {
    rpc AddNewVersion(AddNewVersionRequest) returns (AddNewVersionResponse) {} //添加新版本
    rpc GetAllVersions(GetAllVersionsRequest) returns(GetAllVersionsResponse){}//查询所有版本
    rpc GetLatestVersion(GetLatestVersionRequest) returns (GetLatestVersionResponse){}//通过device和source查询最新版本信息
    rpc UpdateVersion(UpdateVersionRequest) returns (UpdateVersionResponse) {}//通过id修改版本信息
    rpc DeleteVersion(DeleteVersionRequest) returns (DeleteVersionResponse) {}//通过id删除版本信息
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {}          //通过id获取版本信息
}

message Version {
    string device = 1;
    string versionName = 2;
    string versionCode = 3;
    string md5 = 4;
    string fileName = 5;
    int64  length = 6;
    string path = 7;
    string descriptionCn = 8;
    string descriptionEn = 9;
    int64  uploaderUid = 10;
    int32  status = 11;
    int32  id = 12;
    int64  createTime = 13;
    int64  updateTime = 14;
    int64  tid = 15;
}

message AddNewVersionRequest {
    Version version = 1;
}

message AddNewVersionResponse {
    int32 ErrorCode = 1;
}

message GetAllVersionsRequest {
    int32   count = 1;
    int32   page = 2;
    int64   tid = 3;
}

message GetAllVersionsResponse {
    int32    ErrorCode = 1;
    repeated Version versions = 2;
    int32    totalCount = 3;
}

message GetLatestVersionRequest {
    string   device = 1;
    string   source = 2;
    string   username = 3;
}

message GetLatestVersionResponse {
    int32   errorCode = 1;
    Version version = 2;
}

message DeleteVersionRequest {
    int32  id = 1;
    int64  tid = 2;
}

message DeleteVersionResponse {
    int32 errorCode = 1;
}

message UpdateVersionRequest {
    Version version = 1;
}

message UpdateVersionResponse {
    int32 ErrorCode = 1;
}

message GetVersionRequest {
    int32  id = 1;
    int64  tid = 2;
}

message GetVersionResponse {
    int32 errorCode = 1;
    Version version = 2;
}

