//protoc --go_out=plugins=grpc:. adv/*.proto

syntax = "proto3";

package adv;

// The Id service definition.
service Advertisement {
    rpc GetAdvertisement(AdvertisementRequest) returns (AdvertisementReply) {}            //app获取广告
}

message AdvertisementRequest {
    string name = 1;
    string md5 = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    string source = 5;
    string fileName = 6;
    string fileUrl = 7;
    int32 state = 8;
    string advertiser = 9;
    int32 id = 10;
    string signature = 11;
    string advUrl = 12;
    int32 page = 13;
    int32 count = 14;
    int64 tid = 15;
}

message AdvertisementReply {
    string name = 1;
    string md5 = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    string source = 5;
    string fileUrl = 6;
    int32 state = 7;
    string advertiser = 8;
    int32 errorCode = 9;
    string signature = 10;
    int32 id = 11;
    string advUrl = 12;
    int64 tid = 13;
    string fileName = 14;
}